<resources>
    <string name="app_name">RetrofitTest</string>
    <string name="UserName">&#8195;用户名:</string>
    <string name="Password">&#8195;&#8195;密码:</string>
    <string name="PasswordAgain">密码重复:</string>
    <string name="Register">注册</string>
    <string name="Confrim">确定</string>
    <string name="Login">登录</string>
    <string name="Cancel">取消</string>
    <string name="loading">加载中</string>
    <string name="load_failed">加载失败</string>
</resources>
